THRIFT-3260 multiple warnings in c_glib tutorial Client: c_glib Patch: Simon South <ssouth@simonsouth.com>

This closes #572

Tutorial:
- Silence unused-function warnings
- Remove spurious ";" from GObject type macro
Compiler:
- Suppress unused-var warnings in client initializers
- Omit spurious ";" after GObject type macros